# Mora-Ormj

./: .project  =3.2.0  Mora-Ormj.cabal
.dist-buildwrapper/: Ormj.cabal
.dist-buildwrapper/src/compiler/: Main.hs  Scanner.hs
.dist-buildwrapper/src/generation/: CreateArchitecture.hs  CreateDomain.hs  GenerateDomain.hs  ParseA.hs
.dist-scion/: setup-config
doc/: LEER  NotesForAG
doc/scanner/: pruebasScanner.ods
doc/strucutre/: annotations.html  index.html  packagedeclaration.html
src/: Main.hs
src/Mora/Ormj/: Chain.hs  Integration.hs  MainProf10.hs  MainProf20.hs  MainProf30.hs  MainProf40.hs  MainProf50.hs  MainProf60.hs  Parser.hs  Scanner.hs  ScannerTest.hs
src/Mora/Ormj/Ast/: Semantic.hs  Sintax.hs
src/Mora/Ormj/Integration/: ScannerParser.hs
src/Mora/Ormj/Scanner/: Generic.hs  Lexical.hs  Position.hs  Show.hs  Token.hs
src/ag/: ContexConditions.ag
src/ag/generation/: GenerateArchitecture.ag  GenerateDomain.ag
src/compiler/: Chain.hs  IntegrationScannerParser.hs  MainProf10.hs  MainProf20.hs  MainProf30.hs  MainProf40.hs  Parser.hs  ScannerGeneric.hs  ScannerLexical.hs  ScannerPosition.hs  ScannerShow.hs  ScannerToken.hs  Semantic.hs  Sintax.hs
src/generation/: GenerateArchitecture.hs  Main.hs
src/lib/: HelperDirectory.hs
src/lib/test_files/jdk6/: CompilationUnit  testNum
src/prof/: MainProf10.prof  MainProf20.prof  MainProf30.prof  MainProf40.prof  MainProf50.prof  MainProf60.prof
src/template/: IbatisMap.hs  IbatisSettings.hs
src/test/parser/: 11conditionalOrExpression  133statementWithoutTrailingSubstatement  154switchStatement  179interfaceDeclaration  1compilationUnitSimple  203instanceInitializer  204staticInitializer  205constructorDeclaration  24unaryExpressionNotPlusMinus  26primary  29type  2packageDeclarationNormalAnnotation2  2packageDeclarationNormalAnnotation3  2packageDeclarationSingleElementAnnotation1  30primitiveType  38typeArguments  49assignment  71castExpression  85typeDeclaration1  87normalClassDeclaration  97interfaces  Clase  clase2  elemenValueVsElementValuePairs
src/test/parser/java/: AbstractApplicationContextTests.java  AbstractBeanFactoryTests.java  AbstractControlFlowTests.java  BeanDefinitionBuilderTests.java  BeanDefinitionTests.java  BeanFactoryPostProcessorTests.java  BeanWiringInfoTests.java  ClassNameBeanWiringInfoResolverTests.java  Colour.java  ConcurrentBeanFactoryTests.java  ConstantsTests.java  CountingFactory.java  DerivedFromProtectedBaseBean.java  FactoryBeanTests.java  FieldRetrievingFactoryBeanTests.java  INestedTestBean.java  InputStreamEditorTests.java  KnowsIfInstantiated.java  LifecycleContextBean.java  OrderComparatorTests.java  Pet.java  ProtectedBaseBean.java  PruebaDaoGeneric.java  ResourceEditorTests.java  ResourceTestBean.java  StringArrayPropertyEditorTests.java  SuppessWarnings.java  TestBean.java  Usuario.java
src/test/scanner/: Test.hs  prueba  test
test/: Content.hs  Main.hs
test/Mora/Ormj/Parser/: 102classMemberDeclaration.mora  10conditionalExpression.mora  110methodDeclaration.mora  127block.mora  132statement.mora  132statement1.mora  133statementWithoutTrailingSubstatement.mora  154switchStatement.mora  162doStatement.mora  166ifThenElseStatement.mora  167statementNoShortIf.mora  17relationalExpression.mora  18shiftExpression.mora  193annotationTypeDeclaration.mora  198enumDeclaration.mora  19additiveExpression.mora  21unaryExpression.mora  24unaryExpressionNotPlusMinus.mora  (+41 more)
test/generation/: domain  project
tmp/: testfloat.java
(+128 files in other folders)
