name:           mora-ormj
version:        0.1
cabal-version:  >= 1.8
build-type:     Simple
author:         andrea moruno

executable test
  build-depends:
                 base >= 4,
                 directory,
                 uu-parsinglib,
                 uulib,
                 filepath,
                 mora-ormj,
                 Cabal
  main-is:       Main.hs
  hs-source-dirs: test

library
  build-depends:   
                   base >= 4,
                   directory,
                   uu-parsinglib,
                   uulib,
                   filepath,
                   Cabal
  exposed-modules: Mora.Ormj.Scanner Mora.Ormj.Parser Mora.Ormj.Integration
    Mora.Ormj.Scanner.Token Mora.Ormj.Scanner.Show Mora.Ormj.Scanner.Lexical Mora.Ormj.Scanner.Generic
    Mora.Ormj.Scanner.Position Mora.Ormj.Integration.ScannerParser Mora.Ormj.Ast.Sintax Mora.Ormj.Ast.Semantic

  ghc-options:  -fno-warn-missing-signatures
  extensions: UndecidableInstances OverlappingInstances
  hs-source-dirs: src test